--- a/views/details.ejs
+++ b/views/details.ejs
@@ -9,7 +9,7 @@
                         let currentDate = new Date();
                         let date = currentDate.toLocaleDateString([], {day: '2-digit',month:'2-digit'});
                         let currentHour = currentDate.getHours();
-                        const tonight = 24 - currentHour;
+                        const tonight =Math.abs(24 - currentHour);
                     %>
                     <%= date %>
                 </p>
@@ -18,14 +18,14 @@
                 <figure class="flex flex-col justify-center items-center gap-3">
                     <figcaption class="flex flex-col items-center justify-center">
                         <div class="flex items-center justify-center w-14 h-16">
-                            <img src="https://openweathermap.org/img/wn/<%= data.daily[0].weather[0].icon %>@2x.png" alt="weather-icon"
+                            <img src="https://openweathermap.org/img/wn/<%= data_daily.weather[0].icon %>@2x.png" alt="weather-icon"
                                 class=" w-full h-full">
                         </div>
                         <p style="text-shadow: 0px 4px 4px #00000040;" class="  nt-numbers text-sm mb-2">
-                            <%= data.daily[0].temp.day.toFixed(0)%>°<span class="text-sm font-title">C</span>
+                            <%= data_daily.temp.day.toFixed(0)%>°<span class="text-sm font-title">C</span>
                         </p>
                         <p style="text-shadow: 0px 4px 4px #00000040;" class="sm:text-lg text-xs font-body font-medium">
-                            <%= data.daily[0].summary.charAt(0).toUpperCase()%><%= data.daily[0].summary.slice(1)%>
+                            <%= data_daily.summary.charAt(0).toUpperCase()%><%= data_daily.summary.slice(1)%>
                         </p>
                     </figcaption>
                     <article class="grid grid-cols-2 w-full h-full px-5 gap-1 ">
@@ -34,7 +34,7 @@
                                 Feels Like
                             </figcaption>
                             <div>
-                                <%= data.daily[0].feels_like.day.toFixed(0)%>°<span class="text-xs font-title">C</span>
+                                <%= data_daily.feels_like.day.toFixed(0)%>°<span class="text-xs font-title">C</span>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
                         </figure>
@@ -43,7 +43,7 @@
                                 Dew Point
                             </figcaption>
                             <div>
-                                <%= data.daily[0].dew_point.toFixed(0)%>°<span class="text-xs font-title">C</span>
+                                <%= data_daily.dew_point.toFixed(0)%>°<span class="text-xs font-title">C</span>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
 
@@ -53,7 +53,7 @@
                                 Pressure
                             </figcaption>
                             <div>
-                                <%= data.daily[0].pressure.toFixed(0)%>
+                                <%= data_daily.pressure.toFixed(0)%>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
 
@@ -63,7 +63,7 @@
                                 Wind Speed
                             </figcaption>
                             <div>
-                                <%= data.daily[0].wind_speed.toFixed(0)%> <span>km/h</span>
+                                <%= data_daily.wind_speed.toFixed(0)%> <span>km/h</span>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
 
@@ -73,7 +73,7 @@
                                 Humidity
                             </figcaption>
                             <div>
-                                <%= data.daily[0].humidity.toFixed(0)%>%
+                                <%= data_daily.humidity.toFixed(0)%>%
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
 
@@ -83,7 +83,7 @@
                                 Wind Gust
                             </figcaption>
                             <div>
-                                <%= data.daily[0].wind_gust.toFixed(0)%> <span>km/h</span>
+                                <%= data_daily.wind_gust.toFixed(0)%> <span>km/h</span>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
 
@@ -93,7 +93,7 @@
                                 Max UV Index
                             </figcaption>
                             <div>
-                                <%= data.daily[0].uvi.toFixed(0)%>
+                                <%= data_daily.uvi.toFixed(0)%>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
 
@@ -103,7 +103,7 @@
                                 Clouds
                             </figcaption>
                             <div>
-                                <%= data.daily[0].clouds.toFixed(0)%>
+                                <%= data_daily.clouds.toFixed(0)%>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
                         </figure>
@@ -122,14 +122,14 @@
                 <figure class="flex flex-col justify-center items-center gap-3">
                     <figcaption class="flex flex-col items-center justify-center">
                         <div class="flex items-center justify-center w-14 h-16">
-                            <img src="https://openweathermap.org/img/wn/<%= data.hourly[tonight].weather[0].icon %>@2x.png" alt="weather-icon"
+                            <img src="https://openweathermap.org/img/wn/<%= data_tonight.weather[0].icon %>@2x.png" alt="weather-icon"
                                 class=" w-full h-full">
                         </div>
                         <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers text-sm mb-2">
-                            <%= data.hourly[tonight].temp.toFixed(0)%>°<span class="text-sm font-title">C</span>
+                            <%= data_tonight.temp.toFixed(0)%>°<span class="text-sm font-title">C</span>
                         </p>
                         <p style="text-shadow: 0px 4px 4px #00000040;" class="sm:text-lg text-xs font-body font-medium">
-                            <%= data.hourly[tonight].weather[0].description.charAt(0).toUpperCase()%><%= data.hourly[tonight].weather[0].description.slice(1)%>
+                            <%= data_tonight.weather[0].description.charAt(0).toUpperCase()%><%= data_tonight.weather[0].description.slice(1)%>
                         </p>
                     </figcaption>
                     <article class="grid grid-cols-2 w-full h-full px-5 gap-1 ">
@@ -138,7 +138,7 @@
                                 Feels Like
                             </figcaption>
                             <div>
-                                <%= data.hourly[tonight].feels_like.toFixed(0)%>°<span class="text-xs font-title">C</span>
+                                <%= data_tonight.feels_like.toFixed(0)%>°<span class="text-xs font-title">C</span>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
                         </figure>
@@ -147,7 +147,7 @@
                                 Dew Point
                             </figcaption>
                             <div>
-                                <%= data.hourly[tonight].dew_point.toFixed(0)%>°<span class="text-xs font-title">C</span>
+                                <%= data_tonight.dew_point.toFixed(0)%>°<span class="text-xs font-title">C</span>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
 
@@ -157,7 +157,7 @@
                                 Pressure
                             </figcaption>
                             <div>
-                                <%= data.hourly[tonight].pressure.toFixed(0)%>
+                                <%= data_tonight.pressure.toFixed(0)%>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
 
@@ -167,7 +167,7 @@
                                 Wind Speed
                             </figcaption>
                             <div>
-                                <%= data.hourly[tonight].wind_speed.toFixed(0)%> <span>km/h</span>
+                                <%= data_tonight.wind_speed.toFixed(0)%> <span>km/h</span>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
 
@@ -177,7 +177,7 @@
                                 Humidity
                             </figcaption>
                             <div>
-                                <%= data.hourly[tonight].humidity.toFixed(0)%>%
+                                <%= data_tonight.humidity.toFixed(0)%>%
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
 
@@ -187,7 +187,7 @@
                                 Wind Gust
                             </figcaption>
                             <div>
-                                <%= data.hourly[tonight].wind_gust.toFixed(0)%> <span>km/h</span>
+                                <%= data_tonight.wind_gust.toFixed(0)%> <span>km/h</span>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
 
@@ -197,7 +197,7 @@
                                 Max UV Index
                             </figcaption>
                             <div>
-                                <%= data.hourly[tonight].uvi.toFixed(0)%>
+                                <%= data_tonight.uvi.toFixed(0)%>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
 
@@ -207,7 +207,7 @@
                                 Clouds
                             </figcaption>
                             <div>
-                                <%= data.hourly[tonight].clouds.toFixed(0)%>
+                                <%= data_tonight.clouds.toFixed(0)%>
                             </div>
                             <hr class="absolute w-[95%] bottom-0 border-gray-600 left-1 ">
                         </figure>
@@ -216,10 +216,21 @@
                 <% } %>
         </article>
         <article class="h-56 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
-            <figure class="flex justify-between px-3 py-2 shadow-md text-sm">
+            <figure class="flex justify-around px-3 py-2 shadow-md text-sm">
                 <figcaption class="font-title">Sunrise / Sunset</figcaption>
+                <figcaption class="font-title">Moonrise / Moonset</figcaption>
             </figure>
             <% if(locals.data) {%>
+                <% 
+                let unix_timestamp_sun_rise = data.daily[0].sunrise
+                let unix_timestamp_sun_set = data.daily[0].sunset
+                let sunrise = new Date(unix_timestamp_sun_rise * 1000);
+                let sunset = new Date(unix_timestamp_sun_set * 1000);
+                let unix_timestamp_moon_rise = data.daily[0].moonrise
+                let unix_timestamp_moon_set = data.daily[0].moonset
+                let moonrise = new Date(unix_timestamp_moon_rise * 1000);
+                let moonset = new Date(unix_timestamp_moon_set * 1000);
+                %>
                 <figure class="flex p-2">
                     <article class="w-1/2 flex flex-col justify-between px-1 py-4">
                         <figure class="hidden relative dark:flex dark:justify-between dark:items-center w-11/12">
@@ -228,7 +239,7 @@
                                 <path fill="#ff7a00"
                                     d="M120 40V16a8 8 0 0 1 16 0v24a8 8 0 0 1-16 0m72 88a64 64 0 1 1-64-64a64.07 64.07 0 0 1 64 64m-16 0a48 48 0 1 0-48 48a48.05 48.05 0 0 0 48-48M58.34 69.66a8 8 0 0 0 11.32-11.32l-16-16a8 8 0 0 0-11.32 11.32Zm0 116.68l-16 16a8 8 0 0 0 11.32 11.32l16-16a8 8 0 0 0-11.32-11.32ZM192 72a8 8 0 0 0 5.66-2.34l16-16a8 8 0 0 0-11.32-11.32l-16 16A8 8 0 0 0 192 72m5.66 114.34a8 8 0 0 0-11.32 11.32l16 16a8 8 0 0 0 11.32-11.32ZM48 128a8 8 0 0 0-8-8H16a8 8 0 0 0 0 16h24a8 8 0 0 0 8-8m80 80a8 8 0 0 0-8 8v24a8 8 0 0 0 16 0v-24a8 8 0 0 0-8-8m112-88h-24a8 8 0 0 0 0 16h24a8 8 0 0 0 0-16" />
                             </svg>
-                            <p class="text-[10px]">8hr 50min</p>
+                            <p class="text-[10px] font-numbers font-normal"><%= Math.abs(sunrise.getHours() - sunset.getHours())%>hr <%=Math.abs(sunrise.getMinutes() - sunset.getMinutes())%>min</p>
                         </figure>
                         <figure class="dark:hidden relative flex justify-between items-center w-11/12">
                             <%# Sun-Light Theme %>
@@ -236,19 +247,19 @@
                                 <path fill="#3F5781"
                                 d="M120 40V16a8 8 0 0 1 16 0v24a8 8 0 0 1-16 0m72 88a64 64 0 1 1-64-64a64.07 64.07 0 0 1 64 64m-16 0a48 48 0 1 0-48 48a48.05 48.05 0 0 0 48-48M58.34 69.66a8 8 0 0 0 11.32-11.32l-16-16a8 8 0 0 0-11.32 11.32Zm0 116.68l-16 16a8 8 0 0 0 11.32 11.32l16-16a8 8 0 0 0-11.32-11.32ZM192 72a8 8 0 0 0 5.66-2.34l16-16a8 8 0 0 0-11.32-11.32l-16 16A8 8 0 0 0 192 72m5.66 114.34a8 8 0 0 0-11.32 11.32l16 16a8 8 0 0 0 11.32-11.32ZM48 128a8 8 0 0 0-8-8H16a8 8 0 0 0 0 16h24a8 8 0 0 0 8-8m80 80a8 8 0 0 0-8 8v24a8 8 0 0 0 16 0v-24a8 8 0 0 0-8-8m112-88h-24a8 8 0 0 0 0 16h24a8 8 0 0 0 0-16" />
                             </svg>
-                            <p class="text-[10px] font-numbers font-medium">8hr 50min</p>
+                            <p class="text-[10px] font-numbers font-normal"><%= Math.abs(sunrise.getHours() - sunset.getHours())%>hr <%=Math.abs(sunrise.getMinutes() - sunset.getMinutes())%>min</p>
                         </figure>
                         <hr class="border-gray-600 w-11/12 mt-2">
                         <figure class="pt-2 w-11/12 flex justify-between items-center">
                             <%# Rise %>
                             <h3 class="font-body font-medium text-xs">Rise</h3>
-                            <p class="text-[10px] font-numbers font-medium">7.20 AM</p>
+                            <p class="text-[10px] font-numbers font-medium"><%= sunrise.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'}) %> </p>
                         </figure>
                         <hr class="border-gray-600 w-11/12 mt-2">
                         <figure class="pt-2 w-11/12 flex justify-between items-center">
                             <%# Set %>
                             <h3 class="font-body font-medium text-xs">Set</h3>
-                            <p class="text-[10px] font-numbers font-medium">4.10 PM</p>
+                            <p class="text-[10px] font-numbers font-medium"><%= sunset.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'}) %> </p>
                         </figure>
                         <hr class="border-gray-600 w-11/12 mt-2">
                     </article>
@@ -257,24 +268,26 @@
                         <figure class="hidden relative dark:flex dark:justify-between dark:items-center w-11/12">
                             <%# Moon-Dark Theme %>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256"><path fill="#ff7a00" d="M233.54 142.23a8 8 0 0 0-8-2a88.08 88.08 0 0 1-109.8-109.8a8 8 0 0 0-10-10a104.84 104.84 0 0 0-52.91 37A104 104 0 0 0 136 224a103.09 103.09 0 0 0 62.52-20.88a104.84 104.84 0 0 0 37-52.91a8 8 0 0 0-1.98-7.98Zm-44.64 48.11A88 88 0 0 1 65.66 67.11a89 89 0 0 1 31.4-26A106 106 0 0 0 96 56a104.11 104.11 0 0 0 104 104a106 106 0 0 0 14.92-1.06a89 89 0 0 1-26.02 31.4Z"/></svg>
-                            <p class="text-[10px]">8hr 50min</p>
+                            <p class="text-[10px] font-numbers font-normal"><%= Math.abs(moonrise.getHours() - moonset.getHours())%>hr <%=Math.abs(moonrise.getMinutes() - moonset.getMinutes())%>min</p>
+
                         </figure>
                         <figure class="dark:hidden relative flex justify-between items-center w-11/12">
                             <%# Moon-Light Theme %>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256"><path fill="#3F5781" d="M233.54 142.23a8 8 0 0 0-8-2a88.08 88.08 0 0 1-109.8-109.8a8 8 0 0 0-10-10a104.84 104.84 0 0 0-52.91 37A104 104 0 0 0 136 224a103.09 103.09 0 0 0 62.52-20.88a104.84 104.84 0 0 0 37-52.91a8 8 0 0 0-1.98-7.98Zm-44.64 48.11A88 88 0 0 1 65.66 67.11a89 89 0 0 1 31.4-26A106 106 0 0 0 96 56a104.11 104.11 0 0 0 104 104a106 106 0 0 0 14.92-1.06a89 89 0 0 1-26.02 31.4Z"/></svg>
-                            <p class="text-[10px] font-numbers font-medium">8hr 50min</p>
+
+                            <p class="text-[10px] font-numbers font-normal"><%= Math.abs(moonrise.getHours() - moonset.getHours())%>hr <%=Math.abs(moonrise.getMinutes() - moonset.getMinutes())%>min</p>
                         </figure>
                         <hr class="border-gray-600 w-11/12 mt-2">
                         <figure class="pt-2 w-11/12 flex justify-between items-center">
                             <%# Rise %>
                             <h3 class="font-body font-medium text-xs">Rise</h3>
-                            <p class="text-[10px] font-numbers font-medium">7.20 AM</p>
+                            <p class="text-[10px] font-numbers font-medium"><%= moonrise.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'})%></p>
                         </figure>
                         <hr class="border-gray-600 w-11/12 mt-2">
                         <figure class="pt-2 w-11/12 flex justify-between items-center">
                             <%# Set %>
                             <h3 class="font-body font-medium text-xs">Set</h3>
-                            <p class="text-[10px] font-numbers font-medium">4.10 PM</p>
+                            <p class="text-[10px] font-numbers font-medium"><%= moonset.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'})%></p>
                         </figure>
                         <hr class="border-gray-600 w-11/12 mt-2">
                     </article>
