--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
                                 d="m6.4 18.308l-.708-.708l5.6-5.6l-5.6-5.6l.708-.708l5.6 5.6l5.6-5.6l.708.708l-5.6 5.6l5.6 5.6l-.708.708l-5.6-5.6l-5.6 5.6Z" />
                         </svg>
                     </button>
-                    <input id="city_input" type="text" name="city_name" placeholder="Search" onkeydown="enter" required
+                    <input id="city_input" type="text" name="city_name" placeholder="Search" required
                         class="py-2.5 px-16 w-full rounded-md">
                     <button class="absolute left-3 top-2.5  cursor-pointer z-10" onclick="sendForm">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
