--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,20 +12,28 @@
         $("#mobile-menu").toggleClass("hidden");
         $("#mobile-menu").toggleClass("flex");
     }
-    function changeUnit(){
-        const unitSelect = $('#userUnit option:selected').val();
+    function changePreference(){
+        const userUnit = $('#userUnit option:selected').val();
+        const userLang = $('#userLang option:selected').val();
+        var fileName = window.location.pathname.substring(location.pathname.lastIndexOf("/") + 1);
         $.ajax({
-            url:"units",
-            data:{userSelect: unitSelect} ,
+            url:"pref",
+            data:{
+                userUnit: userUnit,
+                userLang: userLang,
+                page: fileName,
+            } ,
             type:"post",
             success: function(result) {
-                location.reload()
+                location.reload();
             }
         })
     }
+    
 </script>
 <body class="bg-primary-lgt dark:bg-primary-drk dark:text-white text-black font-semibold ">
     <header class="px-5 py-4  z-10 dark:bg-secondary-drk bg-secondary-lgt">
+        <% if(locals.language) {%>
         <section class="max-container">
             <nav class="flex justify-between items-center relative" aria-label="main">
                 <% if(locals.city && locals.data) {%>
@@ -78,7 +86,7 @@
                                     d="m6.4 18.308l-.708-.708l5.6-5.6l-5.6-5.6l.708-.708l5.6 5.6l5.6-5.6l.708.708l-5.6 5.6l5.6 5.6l-.708.708l-5.6-5.6l-5.6 5.6Z" />
                             </svg>
                         </button>
-                        <input id="city_input" type="text" name="city_name" placeholder="Search" onkeydown="enter" required
+                        <input id="city_input" type="text" name="city_name" placeholder="Search"required
                             class="py-2.5 px-12 w-full rounded-md  dark:bg-primary-drk bg-primary-lgt">
                         <button class="absolute left-3 top-2.5  cursor-pointer z-10 " onclick="sendForm">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -95,16 +103,26 @@
             </article>
             <hr class="dark:border-primary-drk border-primary-lgt w-screen mb-4">
             <article class="px-8 py-4 w-5/6 dark:bg-secondary-drk bg-secondary-lgt shadow-md flex flex-col gap-6" aria-label="options">
+                <figure class="sm:text-lg">
+                    <figcaption> 
+                        <form method="post">
+                            <button formaction="/location" type="submit">
+                                <%= language.nav_home %>
+                            </button>
+                        </form>
+                    </figcaption>
+                    <hr class="mt-2 dark:border-primary-drk border-primary-lgt">
+                </figure>
                 <figure class="flex justify-between flex-row items-center"> 
                     <figcaption> 
                         <a href="">Language</a>
                     </figcaption>
-                    <select class="bg-transparent p-2 font-body font-medium sm:text-lg text-xs">
-                        <option value="US" class="bg-primary-drk"> English US</option>
-                        <option value="DE" class="bg-primary-drk"> German</option>
-                        <option value="FR" class="bg-primary-drk"> French</option>
-                        <option value="TR" class="bg-primary-drk"> Turkish</option>
-                        <option value="JA" class="bg-primary-drk"> Japanese</option>
+                    <select id="userLang" class="bg-transparent p-2 font-body font-medium sm:text-lg text-xs" onchange="changePreference()">
+                        <option value="us" class="bg-primary-drk" selected> English US</option>
+                        <option value="de" class="bg-primary-drk"> German</option>
+                        <option value="fr" class="bg-primary-drk"> French</option>
+                        <option value="tr" class="bg-primary-drk"> Turkish</option>
+                        <option value="ja" class="bg-primary-drk"> Japanese</option>
                     </select>
                 </figure>
                 <hr class="-mt-5 dark:border-primary-drk border-primary-lgt">
@@ -112,7 +130,7 @@
                     <figcaption> 
                         <a href="">Units</a>
                     </figcaption>
-                    <select id="userUnit" class="bg-transparent p-2 sm:w-36 w-[105px] sm:text-lg text-xs" onchange="changeUnit()">
+                    <select id="userUnit" class="bg-transparent p-2 sm:w-36 w-[105px] sm:text-lg text-xs" onchange="changePreference()">
                         <% if(locals.units) {%>
                         <option value="standard" class="bg-primary-drk" selected> <%= units.charAt(0).toUpperCase() %><%= units.slice(1)%></option>
                         <% } %>
@@ -124,4 +142,5 @@
                 <hr class="-mt-5 dark:border-primary-drk border-primary-lgt">
             </article>
         </section>
+        <% } %>
     </header>
