--- a/views/location.ejs
+++ b/views/location.ejs
@@ -8,11 +8,12 @@
         return result;
     }
 %>
-    <main class="max-container">
+<main class="max-container">
+        <% if(locals.language && locals.unit_symbols) {%>
         <section>
             <article class="h-60 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
-                    <figcaption class="font-title">Current Weather</figcaption>
+                    <figcaption class="font-title"><%= language.current_weather %></figcaption>
                     <p class="font-numbers font-normal">
                         <%
                             let currentDate = new Date();
@@ -31,13 +32,13 @@
                             <figcaption>
                                 <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.current.weather[0].description.charAt(0).toUpperCase()%><%= data.current.weather[0].description.slice(1)%></p>
                             </figcaption>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.current.temp.toFixed(0)%>°<span class="text-xl font-title">C</span></p>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal">Feels Like <span><%= data.current.feels_like.toFixed(0)%>°C</span></p>
+                            <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.current.temp.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
+                            <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal"><%= language.feels_like%> <span><%= data.current.feels_like.toFixed(0)%><%= unit_symbols.unit_degree %></span></p>
                         </div>
                     </div>
                     <form method="post">
                         <button formaction="/details" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
-                            More Details
+                            <%= language.more_details %>
                         </button>
                     </form>
                 </figure>
@@ -45,7 +46,7 @@
             </article>
             <article class="h-60 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
-                    <figcaption class="font-title">Today's Weather Forecast</figcaption>
+                    <figcaption class="font-title"><%= language.todays_weather_forecast %></figcaption>
                     <p class="font-numbers font-normal">
                         <%
                             let date = currentDate.toLocaleDateString([], {day: '2-digit',month:'2-digit'});
@@ -63,13 +64,13 @@
                                 <figcaption>
                                     <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.daily[0].weather[0].description.charAt(0).toUpperCase()%><%= data.daily[0].weather[0].description.slice(1)%></p>
                                 </figcaption>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.daily[0].temp.day.toFixed(0)%>°<span class="text-xl font-title">C</span></p>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal">Feels Like <span><%= data.daily[0].feels_like.day.toFixed(0)%>°C</span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.daily[0].temp.day.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal"><%= language.feels_like %> <span><%= data.daily[0].feels_like.day.toFixed(0)%><%= unit_symbols.unit_degree %></span></p>
                             </div>
                         </div>
                         <form method="post">
                             <button formaction="/details" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
-                                More Details
+                                <%= language.more_details %>
                             </button>
                         </form>
                     </figure>
@@ -77,7 +78,7 @@
             </article>
             <article class="h-60 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
-                    <figcaption class="font-title">Tonight's Weather Forecast</figcaption>
+                    <figcaption class="font-title"><%= language.tonights_weather_forecast %></figcaption>
                     <p class="font-numbers font-normal">
                         <% 
                             let currentHour = currentDate.getHours();
@@ -96,13 +97,13 @@
                                 <figcaption>
                                     <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.hourly[tonight].weather[0].description.charAt(0).toUpperCase()%><%= data.hourly[tonight].weather[0].description.slice(1)%></p>
                                 </figcaption>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.daily[0].temp.night.toFixed(0)%>°<span class="text-xl font-title">C</span></p>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal">Feels Like <span><%= data.daily[0].feels_like.night.toFixed(0)%>°C</span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.daily[0].temp.night.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal"><%= language.feels_like %> <span><%= data.daily[0].feels_like.night.toFixed(0)%><%= unit_symbols.unit_degree %></span></p>
                             </div>
                         </div>
                         <form method="post">
                             <button formaction="/details" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
-                                More Details
+                                <%= language.more_details %>
                             </button>
                         </form>
                     </figure>
@@ -110,7 +111,7 @@
             </article>
             <article class="h-60 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
-                    <figcaption class="font-title">Tomorrow's Weather Forecast</figcaption>
+                    <figcaption class="font-title"><%= language.tomorrow_weather_forecast %></figcaption>
                     <p class="font-numbers font-normal">
                         <%= addDays(currentDate,1) %>
                     </p>
@@ -125,18 +126,19 @@
                                 <figcaption>
                                     <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.daily[1].weather[0].description.charAt(0).toUpperCase()%><%= data.daily[1].weather[0].description.slice(1)%></p>
                                 </figcaption>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl  pl-2"><%= data.daily[1].temp.day.toFixed(0)%>°<span class="text-xl font-title">C</span></p>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm  font-body font-normal pl-2">Feels Like <span><%= data.daily[1].feels_like.day.toFixed(0)%>°C</span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl  pl-2"><%= data.daily[1].temp.day.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm  font-body font-normal pl-2"><%= language.feels_like %> <span><%= data.daily[1].feels_like.day.toFixed(0)%><%= unit_symbols.unit_degree %></span></p>
                             </div>
                         </div>
                         <form method="post">
                             <button formaction="/tomorrow" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
-                                More Details
+                                <%= language.more_details %>
                             </button>
                         </form>
                     </figure>
                     <% } %>
             </article>
         </section>
+        <% } %>
     </main>
 <%- include("partials/footer.ejs") %>
