--- a/views/location.ejs
+++ b/views/location.ejs
@@ -11,10 +11,10 @@
 <main class="max-container">
         <% if(locals.language && locals.unit_symbols) {%>
         <section>
-            <article class="h-60 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
+            <article class="h-60 sm:h-72 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
-                    <figcaption class="font-title"><%= language.current_weather %></figcaption>
-                    <p class="font-numbers font-normal">
+                    <figcaption class="font-title font-normal sm:text-xl dark:text-primary-lgt"><%= language.current_weather %></figcaption>
+                    <p class="font-numbers font-thin dark:text-primary-lgt sm:text-xl">
                         <%
                             let currentDate = new Date();
                             let am_pm = currentDate.toLocaleTimeString([], {hour: '2-digit',minute:'2-digit'});
@@ -23,31 +23,31 @@
                     </p>
                 </figure>
                 <% if(locals.data) {%>
-                <figure class="flex flex-col justify-center items-center gap-3">
+                <figure class="flex flex-col justify-center items-center gap-3 sm:h-60">
                     <div class="flex items-center justify-center gap-2 ">
                         <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
                             <img src="https://openweathermap.org/img/wn/<%= data.current.weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
                         </div>
                         <div class="flex flex-col gap-1">
                             <figcaption>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.current.weather[0].description.charAt(0).toUpperCase()%><%= data.current.weather[0].description.slice(1)%></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg font-normal sm:text-xl"> <%= data.current.weather[0].description.charAt(0).toUpperCase()%><%= data.current.weather[0].description.slice(1)%></p>
                             </figcaption>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.current.temp.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
-                            <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal"><%= language.feels_like%> <span><%= data.current.feels_like.toFixed(0)%><%= unit_symbols.unit_degree %></span></p>
+                            <p style="text-shadow: 0px 4px 4px #00000020;" class="font-numbers font-bold text-4xl sm:text-5xl pl-2"><%= data.current.temp.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
+                            <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal sm:text-lg"><%= language.feels_like%> <%= data.current.feels_like.toFixed(0)%> <span class="text-xs"><%= unit_symbols.unit_degree %>°</span></p>
                         </div>
                     </div>
                     <form method="post">
-                        <button formaction="/details" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
+                        <button formaction="/details" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg  hover:opacity-70">
                             <%= language.more_details %>
                         </button>
                     </form>
                 </figure>
                 <% } %>
             </article>
-            <article class="h-60 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
+            <article class="h-60 sm:h-72 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
-                    <figcaption class="font-title"><%= language.todays_weather_forecast %></figcaption>
-                    <p class="font-numbers font-normal">
+                    <figcaption class="font-title font-normal sm:text-xl dark:text-primary-lgt"><%= language.todays_weather_forecast %></figcaption>
+                    <p class="font-numbers font-thin dark:text-primary-lgt sm:text-xl">
                         <%
                             let date = currentDate.toLocaleDateString([], {day: '2-digit',month:'2-digit'});
                         %>
@@ -55,31 +55,31 @@
                     </p>
                 </figure>
                 <% if(locals.data) {%>
-                    <figure class="flex flex-col justify-center items-center gap-3">
+                    <figure class="flex flex-col justify-center items-center gap-3 sm:h-60">
                         <div class="flex items-center justify-center gap-2 ">
                             <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
                                 <img src="https://openweathermap.org/img/wn/<%= data.daily[0].weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
                             </div>
                             <div class="flex flex-col gap-1">
                                 <figcaption>
-                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.daily[0].weather[0].description.charAt(0).toUpperCase()%><%= data.daily[0].weather[0].description.slice(1)%></p>
+                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg font-normal sm:text-xl"> <%= data.daily[0].weather[0].description.charAt(0).toUpperCase()%><%= data.daily[0].weather[0].description.slice(1)%></p>
                                 </figcaption>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.daily[0].temp.day.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal"><%= language.feels_like %> <span><%= data.daily[0].feels_like.day.toFixed(0)%><%= unit_symbols.unit_degree %></span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000020;" class="font-numbers font-bold text-4xl sm:text-5xl pl-2"><%= data.daily[0].temp.day.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal"><%= language.feels_like %> <%= data.daily[0].feels_like.day.toFixed(0)%> <span class="text-xs"><%= unit_symbols.unit_degree %>°</span></p>
                             </div>
                         </div>
                         <form method="post">
-                            <button formaction="/details" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
+                            <button formaction="/details" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg  hover:opacity-70">
                                 <%= language.more_details %>
                             </button>
                         </form>
                     </figure>
                     <% } %>
             </article>
-            <article class="h-60 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
+            <article class="h-60 sm:h-72 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
-                    <figcaption class="font-title"><%= language.tonights_weather_forecast %></figcaption>
-                    <p class="font-numbers font-normal">
+                    <figcaption class="font-title font-normal sm:text-xl dark:text-primary-lgt"><%= language.tonights_weather_forecast %></figcaption>
+                    <p class="font-numbers font-thin dark:text-primary-lgt sm:text-xl">
                         <% 
                             let currentHour = currentDate.getHours();
                             const tonight =Math.abs(24 - currentHour);
@@ -88,50 +88,50 @@
                     </p>
                 </figure>
                 <% if(locals.data) {%>
-                    <figure class="flex flex-col justify-center items-center gap-3">
+                    <figure class="flex flex-col justify-center items-center gap-3 sm:h-60">
                         <div class="flex items-center justify-center gap-2 ">
                             <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
                                 <img src="https://openweathermap.org/img/wn/<%= data.hourly[tonight].weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
                             </div>
                             <div class="flex flex-col gap-1">
                                 <figcaption>
-                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.hourly[tonight].weather[0].description.charAt(0).toUpperCase()%><%= data.hourly[tonight].weather[0].description.slice(1)%></p>
+                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg font-normal sm:text-xl"> <%= data.hourly[tonight].weather[0].description.charAt(0).toUpperCase()%><%= data.hourly[tonight].weather[0].description.slice(1)%></p>
                                 </figcaption>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl pl-2"><%= data.daily[0].temp.night.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal"><%= language.feels_like %> <span><%= data.daily[0].feels_like.night.toFixed(0)%><%= unit_symbols.unit_degree %></span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000020;" class="font-numbers font-bold text-4xl sm:text-5xl pl-2"><%= data.daily[0].temp.night.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm pl-2 font-body font-normal"><%= language.feels_like %> <%= data.daily[0].feels_like.night.toFixed(0)%> <span class="text-xs"><%= unit_symbols.unit_degree %>°</span></p>
                             </div>
                         </div>
                         <form method="post">
-                            <button formaction="/details" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
+                            <button formaction="/details" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg  hover:opacity-70">
                                 <%= language.more_details %>
                             </button>
                         </form>
                     </figure>
                     <% } %>
             </article>
-            <article class="h-60 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
+            <article class="h-60 sm:h-72 dark:bg-primary-drk bg-primary-lgt m-5 shadow-lg">
                 <figure class="flex justify-between px-5 py-2 shadow-md text-sm">
-                    <figcaption class="font-title"><%= language.tomorrow_weather_forecast %></figcaption>
-                    <p class="font-numbers font-normal">
+                    <figcaption class="font-title font-normal sm:text-xl dark:text-primary-lgt"><%= language.tomorrow_weather_forecast %></figcaption>
+                    <p class="font-numbers font-thin dark:text-primary-lgt sm:text-xl">
                         <%= addDays(currentDate,1) %>
                     </p>
                 </figure>
                 <% if(locals.data) {%>
-                    <figure class="flex flex-col justify-center items-center gap-3">
+                    <figure class="flex flex-col justify-center items-center gap-3 sm:h-60">
                         <div class="flex items-center justify-center gap-2 ">
                             <div class="flex items-center justify-center w-24 h-28 py-4 px-2">
                                 <img src="https://openweathermap.org/img/wn/<%= data.daily[1].weather[0].icon %>@2x.png" alt="weather-icon" class=" w-full h-full">
                             </div>
                             <div class="flex flex-col gap-1">
                                 <figcaption>
-                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg"> <%= data.daily[1].weather[0].description.charAt(0).toUpperCase()%><%= data.daily[1].weather[0].description.slice(1)%></p>
+                                    <p style="text-shadow: 0px 4px 4px #00000040;" class="text-lg font-normal sm:text-xl"> <%= data.daily[1].weather[0].description.charAt(0).toUpperCase()%><%= data.daily[1].weather[0].description.slice(1)%></p>
                                 </figcaption>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="font-numbers font-semibold text-4xl  pl-2"><%= data.daily[1].temp.day.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
-                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm  font-body font-normal pl-2"><%= language.feels_like %> <span><%= data.daily[1].feels_like.day.toFixed(0)%><%= unit_symbols.unit_degree %></span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;"class="font-numbers font-bold text-4xl sm:text-5xl pl-2"><%= data.daily[1].temp.day.toFixed(0)%>°<span class="text-xl font-title"><%= unit_symbols.unit_degree %></span></p>
+                                <p style="text-shadow: 0px 4px 4px #00000040;" class="text-sm  font-body font-normal pl-2"><%= language.feels_like %> <%= data.daily[1].feels_like.day.toFixed(0)%> <span class="text-xs"><%= unit_symbols.unit_degree %>°</span></p>
                             </div>
                         </div>
                         <form method="post">
-                            <button formaction="/tomorrow" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg">
+                            <button formaction="/tomorrow" type="submit" style="-webkit-tap-highlight-color: transparent;" class="dark:bg-icons-drk bg-primary-lgt shadow-lg rounded-lg py-3 px-5 font-interactive font-normal w-40 dark:active:bg-primary-drk active:shadow-inner-lg  hover:opacity-70">
                                 <%= language.more_details %>
                             </button>
                         </form>
